Revision history for {{$dist->name}}:

{{$NEXT}}
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  [Documentation]
  - Bumped copyright year.

v0.8.3    2022-12-22 14:03:34+00:00 Europe/London
  [Enhancements]
  - Added php: to the protocol_in_path_or_referer rule.

  [Documentation]
  - Added missing item to Changes for v0.8.2.

v0.8.2    2022-12-12 16:40:09+00:00 Europe/London
  [Enhancements]
  - Added .config to the misc_extensions rule.

  - Added docroot, ftproot, webroot, inetpub to the cms_prefixes rule.

  - Added adm to the system_dirs rule.

  [Documentation]
  - Fixed typo in Changes.

  [Tests]
  - Fix dependency for Test::Vars.

  [Other]
  - Added GitHub Actions to run tests.

v0.8.1    2022-07-05 12:06:58+01:00 Europe/London
  [Enhancements]
  - Added .bz2 to archive_extensions rule.

  - Updated backup_files rule.

  - Added Windows META-INF and OS/X __MACOSX to system_dirs rule.

  [Toolchain]
  - Sign release.

v0.8.0    2022-06-21 16:36:30+01:00 Europe/London
  [Enhancements]
  - Added .bkp, .backup, .npb, .old, .psb and .psc to the misc_extensions rule.

  - Added cms_prefixes rule.

  - Added backup_files rule.

  [Bug Fixes]
  - Disable capturing on some regexes.

v0.7.0    2022-06-13 16:46:40+01:00 Europe/London
  [Enhancements]
  - Add header_injection rule.

v0.6.1    2022-04-06 16:40:46+01:00 Europe/London
  [Enhancements]
  - Add .lz, .tgz and .xz to the archive_extensions rule.

  [Documentation]
  - Add version when newer rules were added.

  - Fix encoding of links in README.

  [Tests]
  - Test more blocked archive extensions.

v0.6.0    2022-02-18 18:29:34+00:00 Europe/London
  [Documentation]
  - Fix typo in Plack::Middleware::Security::Common ABSTRACT!

v0.5.1    2022-02-18 18:20:32+00:00 Europe/London
  [Enhancements]
  - Add fake_extensions and protocol_in_path_or_referer rules.

  [Documentation]
  - Bump copyright year.

  - Fix typo in Plack::Middleware::Security::Common POD.
